--- a/Plamen/Homework01.html
+++ b/Plamen/Homework01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0044)http://lite-presentation.herokuapp.com/#/1/1 -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title> Presentation </title>
+  <title> Plamen's Presentation </title>
   <link rel="stylesheet" media="all" href="./Homework01_files/application-018564ef5c99ab59c0936b1891ba38e6.css" data-turbolinks-track="true">
   <script src="./Homework01_files/application-91ddda08101b0e4113ba16e7f07a590e.js.download" data-turbolinks-track="true"></script>
   <meta name="csrf-param" content="authenticity_token">
@@ -9,6 +9,7 @@
 </head>
 <body style="transition: -webkit-transform 0.8s ease 0s;">
 
+<img src="">
 
 
 
@@ -33,6 +34,7 @@
 	<!--[if lt IE 9]><script src="..reveal/lib/js/html5shiv.js"></script><![endif]-->
 
 	<style>
+		
 		#spa-app-label
 		{
 			float:right;
@@ -47,7 +49,8 @@
 		}
 
 		code {
-			background-color: gray;
+			
+
 			color: blue;	
 		}
 
@@ -58,6 +61,13 @@
 				white-space: -o-pre-wrap;    /* Opera 7 */
 				word-wrap: break-word;       /* Internet Explorer 5.5+ */
 		}
+
+		body {
+			background-image: url("https://upload.wikimedia.org/wikipedia/commons/6/62/Paracas_National_Reserve%2C_Ica%2C_Peru-3April2011.jpg") ;
+  background-color: #cccccc;
+  background-repeat: no-repeat;
+  background-size: 3000px 1000px;
+}
 	</style>
 
 
@@ -97,7 +107,7 @@
 				</section>
 				<section class="present" style="display: block;">
 					<div style="width: 1200px;"> 
-						<div style="width: 1500px;float: left;text-shadow: 20px 7px 9px #f71919;background-color: rgb(8, 8, 8);/* text-shadow: 0 0 black; */box-shadow: -20px -11px 2px 0px black;">
+						<div style="width: 1500px;float: left;text-shadow: 20px 7px 9px #f71919;/* text-shadow: 0 0 black; */box-shadow: -20px -11px 2px 0px red;">
 							<h2> Минимумът </h2>
 							<ul>
 								<li> HTML </li>	
