--- a/Hrisi/Presentation.html
+++ b/Hrisi/Presentation.html
@@ -64,6 +64,17 @@
 			border:2px solid Tomato;
 		}
 		
+		.caption-second
+		{
+		    background-color:Yellow;
+			border:2px solid Green;
+		}
+		body {
+			background-image: url("https://i.stack.imgur.com/fhEwl.png") ;
+  background-color: #cccccc;
+  background-repeat: no-repeat;
+  background-size: 3000px 1000px;
+		
 	</style>
 
 
@@ -97,7 +108,7 @@
 			</section>
 			<section hidden="" class="future stack" style="display: block;">
 				<section style="display: block;">
-					<h2> Умения нужни за Front-end web програмиране </h2>
+					<h2 class="caption-second"> Умения нужни за Front-end web програмиране </h2>
 				</section>
 				<section class="future" style="display: block;">
 					<div style="width: 1200px;"> 
