add style.css file with some COOL styles in it! P.S. A kak samo ma boli pleksito....

--- a/Plamen/Homework01.html
+++ b/Plamen/Homework01.html
@@ -2,14 +2,14 @@
 <!-- saved from url=(0044)http://lite-presentation.herokuapp.com/#/1/1 -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title> Plamen's Presentation </title>
-  <link rel="stylesheet" media="all" href="./Homework01_files/application-018564ef5c99ab59c0936b1891ba38e6.css" data-turbolinks-track="true">
+<link rel="stylesheet" type="text/css" href="myHotStyle.css">
+
   <script src="./Homework01_files/application-91ddda08101b0e4113ba16e7f07a590e.js.download" data-turbolinks-track="true"></script>
   <meta name="csrf-param" content="authenticity_token">
 <meta name="csrf-token" content="z1Wm8jPbwCA76BCY+2c+CCGwBkbfTSgVpO4L+sqxyJ4B0NJ32rE+HCHDGEnFMc/qK+Gk2WAZM6CaM8zJX5Q0hQ==">
 </head>
 <body style="transition: -webkit-transform 0.8s ease 0s;">
 
-<img src="">
 
 
 
@@ -33,42 +33,6 @@
 	<script>document.write( '<link rel="stylesheet" href="haha/css/js/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );</script><link rel="stylesheet" href="./Homework01_files/paper.css" type="text/css" media="print"><!-- If the query includes 'print-pdf', use the PDF print sheet -->
 	<!--[if lt IE 9]><script src="..reveal/lib/js/html5shiv.js"></script><![endif]-->
 
-	<style>
-		
-		#spa-app-label
-		{
-			float:right;
-			list-style: none;
-			font-size: 40px;
-		}
-
-		#spa-app-label p::first-letter
-		{
-			font-weight: bold;
-			font-size: 60px;
-		}
-
-		code {
-			
-
-			color: blue;	
-		}
-
-		pre {
-				white-space: pre-wrap;       /* Since CSS 2.1 */
-				white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-				white-space: -pre-wrap;      /* Opera 4-6 */
-				white-space: -o-pre-wrap;    /* Opera 7 */
-				word-wrap: break-word;       /* Internet Explorer 5.5+ */
-		}
-
-		body {
-			background-image: url("https://upload.wikimedia.org/wikipedia/commons/6/62/Paracas_National_Reserve%2C_Ica%2C_Peru-3April2011.jpg") ;
-  background-color: #cccccc;
-  background-repeat: no-repeat;
-  background-size: 3000px 1000px;
-}
-	</style>
 
 
 	<div class="reveal linear" data-transition-speed="default" data-background-transition="default">
@@ -96,10 +60,10 @@
 					</ol>
 				</section>
 			</section> -->
-			<section class="past" style="display: block;" hidden="">
+			<section class="past" hidden="">
 				<h1> Подготовка за работа с Cordova </h1>
 			</section>
-			<section class="stack present" style="display: block;" data-previous-indexv="0">
+			<section class="stack present"  data-previous-indexv="0">
 				<section style="display: block;" class="past" hidden="">
 					<h2 style="
     box-shadow: 12px -12px 14px 6px black;
