Adding some ... new features :P

--- a/Plamen/Homework01.html
+++ b/Plamen/Homework01.html
@@ -7,6 +7,12 @@
   <script src="./Homework01_files/application-91ddda08101b0e4113ba16e7f07a590e.js.download" data-turbolinks-track="true"></script>
   <meta name="csrf-param" content="authenticity_token">
 <meta name="csrf-token" content="z1Wm8jPbwCA76BCY+2c+CCGwBkbfTSgVpO4L+sqxyJ4B0NJ32rE+HCHDGEnFMc/qK+Gk2WAZM6CaM8zJX5Q0hQ==">
+
+<audio autoplay loop>
+  <source src="audio/aaa.ogg" type="audio/ogg">
+  <source src="audio/aaa.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 </head>
 <body style="transition: -webkit-transform 0.8s ease 0s;">
 
