--- a/Plamen/Homework01.html
+++ b/Plamen/Homework01.html
@@ -39,9 +39,7 @@
 	<script>document.write( '<link rel="stylesheet" href="haha/css/js/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );</script><link rel="stylesheet" href="./Homework01_files/paper.css" type="text/css" media="print"><!-- If the query includes 'print-pdf', use the PDF print sheet -->
 	<!--[if lt IE 9]><script src="..reveal/lib/js/html5shiv.js"></script><![endif]-->
 
-
-
-	<div class="reveal linear" data-transition-speed="default" data-background-transition="default">
+	<div id="wrapper" class="reveal linear" data-transition-speed="default" data-background-transition="default">
 		<div class="slides" style="width: 960px; height: 700px; zoom: 0.512292;"><!-- Any section element inside of this container is displayed as a slide -->
 			<!--<section>
 				<section>
