--- a/Hrisi/Presentation.html
+++ b/Hrisi/Presentation.html
@@ -69,11 +69,13 @@
 		    background-color:Yellow;
 			border:2px solid Green;
 		}
-		body {
+		body 
+		{
 			background-image: url("https://i.stack.imgur.com/fhEwl.png") ;
   background-color: #cccccc;
   background-repeat: no-repeat;
   background-size: 4000px 1000px;
+        }
 		
 	</style>
 
